@@ -1,9 +1,19 @@
+Tue Dec  5 13:31:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-m88k.h:
+        * ace/os_include/os_signal.h:
+        * ace/os_include/sys/os_resource.h:
+        * ace/os_include/sys/os_time.h:
+        * include/makeinclude/platform_m88k.GNU:
+          Removed support for m88k which isn't maintained for years now.
+          Fixes bugzilla 2012
+
 Tue Dec  5 13:28:10 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/templates/gnu.mpd:
 
           If the gendir setting for the custom file is '.', then ommit the
-          gendir setting.  This is required for version 3.4.45 of MPC.    
+          gendir setting.  This is required for version 3.4.45 of MPC.
 
 Tue Dec  5 12:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
